--- a/style/colorUI/main.wxss
+++ b/style/colorUI/main.wxss
@@ -12,7 +12,8 @@
 page {
 	/* Color 可以自定义相关配色 */
 	/* var属性兼容性 --> https://www.caniuse.com/#feat=css-variables */
-	/* 标准色 */
+  /* 标准色 */
+  --main:#38C1F7;
 	--red: #e54d42;
 	--orange: #f37b1d;
 	--yellow: #fbbd08;
@@ -3443,7 +3444,10 @@ scroll-view.cu-steps .cu-item {
 .lines-white::after {
 	border-color: var(--white);
 }
-
+.bg-main{
+  background-color: var(--main);
+  color:var(--white);
+}
 .bg-red {
 	background-color: var(--red);
 	color: var(--white);
@@ -3860,6 +3864,11 @@ scroll-view.cu-steps .cu-item {
 
 .text-right {
 	text-align: right;
+}
+.text-main,
+.line-main,
+.lines-main{
+  color:var(--main);
 }
 
 .text-red,
