--- a/utils/Tools.wxs
+++ b/utils/Tools.wxs
@@ -1,6 +1,16 @@
 function include(obj,val){  
   return obj.indexOf(val)>-1;
 }
+function sum() {
+	var sum = 0;
+	for (var i = 0; i < arguments.length ; i ++) {
+		sum += parseInt(arguments[i]);
+	}
+	return sum;
+}
+
+
 module.exports = {
-  include:include
+  include:include,
+  sum:sum
 }
