--- a/app.wxss
+++ b/app.wxss
@@ -25,6 +25,10 @@
   padding-bottom: calc(50rpx + constant(safe-area-inset-bottom) / 2);  
   padding-bottom: calc(50rpx + env(safe-area-inset-bottom) / 2); 
 }
+.footer-btns{
+  padding-bottom: calc(250rpx + constant(safe-area-inset-bottom) / 2);  
+  padding-bottom: calc(250rpx + env(safe-area-inset-bottom) / 2); 
+}
 
 .safe-bottom{  
   padding-bottom: calc(50rpx + constant(safe-area-inset-bottom) / 2);  
