--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -84,9 +84,8 @@
     </view>
     <view class="cu-bar bg-white justify-end">
       <view class="action">
-        <button class="cu-btn line-green text-green" bindtap="hideModal">取消</button>
-        <button class="cu-btn bg-green margin-left" open-type="getPhoneNumber" bindgetphonenumber="getPhoneNumber">确定</button>
-
+        <button class="cu-btn line-gray text-gray" bindtap="hideModal">取消</button>
+        <button class="cu-btn bg-main margin-left" open-type="getPhoneNumber" bindgetphonenumber="getPhoneNumber">确定</button>
       </view>
     </view>
   </view>
