--- a/pages/report/report.wxml
+++ b/pages/report/report.wxml
@@ -8,12 +8,27 @@
     </view>
   </view>
   <view class="cu-form-group">
-    <view class="title">二甲双胍（普通片）1000mg/日</view>
+    <view class="title">准时用药</view>
     <input hidden name="content.medic" value="{{reportForm.content.medic||0}}"></input>
-    <checkbox-group bindchange="checkboxChange" data-type="medic" >
+    <checkbox-group bindchange="checkboxChange" data-type="medic">
       <checkbox class="round main {{reportForm.content.medic==1?'checked':''}}" checked="{{reportForm.content.medic==1?true:false}}" value="1"></checkbox>
     </checkbox-group>
   </view>
+  <view class="padding flex bg-white solid-bottom">
+    <text class="flex-treble">药品名称</text>
+    <text class="flex-twice text-center">规格</text>
+    <text class="flex-twice text-center">方式</text>
+    <text class="flex-twice text-center">时间</text>
+    <text class="cuIcon-add text-main text-bold" bindtap="add" data-type="treat"></text>
+  </view>
+  <view class="padding flex bg-white solid-bottom text-sm align-center" wx:for="{{treats}}">
+    <input class="flex-treble text-left" placeholder="药品名称" value="{{item.name}}" bindinput="inputChange" data-type="treat" data-index="{{index}}" data-title="name"></input>
+    <input class="flex-twice text-center" placeholder="药品规格" value="{{item.specs}}" bindinput="inputChange" data-type="treat" data-index="{{index}}" data-title="specs"></input>
+    <input class="flex-twice text-center" placeholder="服用方式" value="{{item.way}}" bindinput="inputChange" data-type="treat" data-index="{{index}}" data-title="way"></input>
+    <input class="flex-twice text-center text-red" placeholder="服用时间" value="{{item.time}}" bindinput="inputChange" data-type="treat" data-index="{{index}}" data-title="time"></input>
+    <text class="cuIcon-move text-red margin-left-sm" bindtap="remove" data-type="treat" data-index="{{index}}"></text>
+  </view>
+
 
   <view class="cu-bar">
     <view class="action">
@@ -63,13 +78,42 @@
       运动是否完成
     </view>
   </view>
-  <view class="cu-form-group">
-    <view class="title">快走/骑车 20分钟</view>
+  <view class="cu-form-group solid-bottom">
+    <view class="title">准时完成</view>
     <input hidden name="content.health" value="{{reportForm.content.health||0}}"></input>
     <checkbox-group bindchange="checkboxChange" data-type="health">
       <checkbox class="round main {{reportForm.content.health==1?'checked':''}}" checked="{{reportForm.content.health==1?true:false}}" value="1"></checkbox>
     </checkbox-group>
   </view>
+
+  <view class="cu-list menu">
+
+    <view class="cu-item">
+      <view class="content">
+        <text class="">运动方式</text>
+      </view>
+      <view class="action">
+        <text class="text-sm">{{reportForm.content.healthWay||healthWays[0]}}</text>
+      </view>
+    </view>
+    <view class="cu-item">
+      <view class="content">
+        <text class="">运动时长</text>
+      </view>
+      <view class="action">
+        <text class="text-sm">{{reportForm.content.time||0}}分钟/次</text>
+      </view>
+    </view>
+    <view class="cu-item">
+      <view class="content">
+        <text class="">运动频率</text>
+      </view>
+      <view class="action">
+        <text class="text-sm">{{reportForm.content.frequency||0}}次/周</text>
+      </view>
+    </view>
+  </view>
+
 
 
   <view class="cu-bar">
@@ -106,7 +150,7 @@
   </view>
   <view class="footer-btns"></view>
   <view class="padding margin-top-xl flex justify-between align-center bg-white footer">
-    <button style="width: 40%;" class="cu-btn bg-main padding-tb-xl padding-tb-xl round" bindtap="call">联系患者</button>
-    <button style="width: 40%;" class="cu-btn bg-main padding-tb-xl padding-tb-xl round" form-type="submit">保存修改</button>
+    <button style="width: 40%;" class="cu-btn bg-main padding-tb-xl padding-tb-xl round" bindtap="call" data-phone="{{patient.phone}}">联系患者</button>
+    <button style="width: 40%;" class="cu-btn bg-main padding-tb-xl padding-tb-xl round" form-type="submit">核实确认</button>
   </view>
 </form>
