--- a/pages/patient/saveResult.wxml
+++ b/pages/patient/saveResult.wxml
@@ -6,10 +6,36 @@
     </view>
   </view>
   <view class="cu-form-group">
-    <view class="title">糖尿病类型</view>
-    <picker mode="selector" bindchange="pickerChange" name="assess.type" data-name="type" value="{{typeVal||0}}" range="{{typeArr}}">
+    <view class="title">手机号</view>
+    <input placeholder="请输入手机号" name="phone" type="number" class="text-right" value=""></input>
+  </view>
+  <view class="cu-form-group">
+    <view class="title">身高</view>
+    <input placeholder="请输入身高" name="height" type="number" class="text-right" value=""></input>
+    <text class="text-gray text-xs padding-top-xs margin-left-xs">CM</text>
+  </view>
+
+  <view class="cu-form-group">
+    <view class="title">体重</view>
+    <input placeholder="请输入体重" type="digit" name="weight" class="text-right" value=""></input>
+    <text class="text-gray text-xs padding-top-xs margin-left-xs">KG</text>
+  </view>
+  <view class="cu-form-group">
+    <view class="title">经管医生</view>
+    <input hidden name="doctorId" value="{{doctor}}"></input>
+    <picker mode="selector" bindchange="pickerChange" data-name="doctor" value="{{0}}" range="{{doctorArr}}" range-key="name">
       <view class="picker">
-        {{typeArr[typeVal||0]}}
+        {{doctorArr[doctor].name||"请选择经管医生"}}
+      </view>
+    </picker>
+  </view>
+
+
+  <view class="cu-form-group">
+    <view class="title">糖尿病类型</view>
+    <picker mode="selector" bindchange="pickerChange" name="assess.type" data-name="type" value="{{type||0}}" range="{{typeArr}}">
+      <view class="picker">
+        {{typeArr[type||0]}}
       </view>
     </picker>
   </view>
@@ -18,66 +44,35 @@
     <input placeholder="请输入病程" name="assess.time" type="digit" class="text-right"></input>
     <view class="text-gray text-xs margin-left-xs padding-top-xs">年</view>
   </view>
-  
 
-  <view class="cu-bar bg-gary solid-bottom">
-    <view class="action">
-      <text class="cuIcon-titles text-orange"></text> 并发症
-    </view>
-  </view>
-  <checkbox-group bindchange="otherChange" data-name="complications" value="{{complications}}" name="assess.complications" class="solid-bottom">
-    <view class="cu-form-group justify-start">
-      <checkbox class='round blue' value="糖尿病酮症"></checkbox>
-      <view class="margin-left">糖尿病酮症</view>
-    </view>
-    <view class="cu-form-group justify-start">
-      <checkbox class='round blue' value="糖尿病酮症酸中毒"></checkbox>
-      <view class="margin-left">糖尿病酮症酸中毒</view>
-    </view>
-    <view class="cu-form-group justify-start">
-      <checkbox class='round blue' value="高血糖高渗综合征"></checkbox>
-      <view class="margin-left">高血糖高渗综合征</view>
-    </view>
-    <view class="cu-form-group justify-start">
-      <checkbox class='round blue' value="心脑血管疾病"></checkbox>
-      <view class="margin-left">心脑血管疾病</view>
-    </view>
-    <view class="cu-form-group justify-start">
-      <checkbox class='round blue' value="糖尿病肾病"></checkbox>
-      <view class="margin-left">糖尿病肾病</view>
-    </view>
-    <view class="cu-form-group justify-start">
-      <checkbox class='round blue' value="糖尿病眼病"></checkbox>
-      <view class="margin-left">糖尿病眼病</view>
-    </view>
-    <view class="cu-form-group justify-start">
-      <checkbox class='round blue' value="糖尿病神经病变"></checkbox>
-      <view class="margin-left">糖尿病神经病变</view>
-    </view>
-  </checkbox-group>
+
+
 
   <view class="cu-form-group">
     <view class="title">目前治疗方案</view>
     <input placeholder="请输入目前治疗方案" name="assess.treatments" class="text-right"></input>
   </view>
 
+  <!--
+
   
   <view class="cu-form-group">
     <view class="title">经济状况</view>
-    <picker mode="selector" bindchange="pickerChange" data-name="economy" name="assess.economicState" value="{{economyVal||0}}" range="{{economyArr}}">
+    <picker mode="selector" bindchange="pickerChange" data-name="economy" name="assess.economicState" value="{{economy||0}}" range="{{economyArr}}">
       <view class="picker">
-        {{economyArr[economyVal||0]}}
+        {{economyArr[economy||0]}}
       </view>
     </picker>
   </view>
   <view class="cu-form-group">
     <view class="title">互联网操作能力</view>
-    <picker mode="selector" bindchange="pickerChange" data-name="internet" name="assess.internet" value="{{internetVal||0}}" range="{{internetArr}}">
+    <picker mode="selector" bindchange="pickerChange" data-name="internet" name="assess.internet" value="{{internet||0}}" range="{{internetArr}}">
       <view class="picker">
-        {{internetArr[internetVal||0]}}
+        {{internetArr[internet||0]}}
       </view>
     </picker>
   </view>
+  -->
   <view class="cu-bar bg-white solid-bottom">
     <view class="action">
       <text class="cuIcon-titles text-orange"></text> 资源评估利用
@@ -85,17 +80,17 @@
   </view>
   <view class="cu-form-group">
     <view class="title">教育水平</view>
-    <picker mode="selector" bindchange="pickerChange" data-name="education" name="assess.education" value="{{educationVal||0}}" range="{{educationArr}}">
+    <picker mode="selector" bindchange="pickerChange" data-name="education" name="assess.education" value="{{education||0}}" range="{{educationArr}}">
       <view class="picker">
-        {{educationArr[educationVal||0]}}
+        {{educationArr[education||0]}}
       </view>
     </picker>
   </view>
   <view class="cu-form-group">
     <view class="title">职业</view>
-    <picker mode="selector" bindchange="pickerChange" data-name="occupation" name="assess.occupation" value="{{occupationVal||0}}" range="{{occupationArr}}">
+    <picker mode="selector" bindchange="pickerChange" data-name="occupation" name="assess.occupation" value="{{occupation||0}}" range="{{occupationArr}}">
       <view class="picker">
-        {{occupationArr[occupationVal||0]}}
+        {{occupationArr[occupation||0]}}
       </view>
     </picker>
   </view>
@@ -105,9 +100,9 @@
   </view>
   <view class="cu-form-group">
     <view class="title">是否独居</view>
-    <picker mode="selector" bindchange="pickerChange" data-name="liveAlone" name="assess.liveAlone" value="{{liveAloneVal||0}}" range="{{liveAloneArr}}">
+    <picker mode="selector" bindchange="pickerChange" data-name="liveAlone" name="assess.liveAlone" value="{{liveAlone||0}}" range="{{liveAloneArr}}">
       <view class="picker">
-        {{liveAloneArr[liveAloneVal||0]}}
+        {{liveAloneArr[liveAlone||0]}}
       </view>
     </picker>
   </view>
@@ -118,17 +113,17 @@
   </view>
   <view class="cu-form-group">
     <view class="title">饮食习惯</view>
-    <picker mode="selector" bindchange="pickerChange" data-name="diet" name="assess.diet" value="{{dietVal||0}}" range="{{dietArr}}">
+    <picker mode="selector" bindchange="pickerChange" data-name="diet" name="assess.diet" value="{{diet||0}}" range="{{dietArr}}">
       <view class="picker">
-        {{dietArr[dietVal||0]}}
+        {{dietArr[diet||0]}}
       </view>
     </picker>
   </view>
   <view class="cu-form-group">
     <view class="title">运动习惯</view>
-    <picker mode="selector" bindchange="pickerChange" data-name="motion" name="assess.motion" value="{{motionVal||0}}" range="{{motionArr}}">
+    <picker mode="selector" bindchange="pickerChange" data-name="motion" name="assess.motion" value="{{motion||0}}" range="{{motionArr}}">
       <view class="picker">
-        {{motionArr[motionVal||0]}}
+        {{motionArr[motion||0]}}
       </view>
     </picker>
   </view>
@@ -139,61 +134,86 @@
   </view>
   <view class="cu-form-group">
     <view class="title">吸烟</view>
-    <picker mode="selector" bindchange="pickerChange" data-name="smoke" name="assess.smoke" value="{{smokeVal||0}}" range="{{smokeArr}}">
+    <picker mode="selector" bindchange="pickerChange" data-name="smoke" name="assess.smoke" value="{{smoke||0}}" range="{{smokeArr}}">
       <view class="picker">
-        {{smokeArr[smokeVal||0]}}
+        {{smokeArr[smoke||0]}}
       </view>
     </picker>
   </view>
   <view class="cu-form-group">
     <view class="title">饮酒</view>
-    <picker mode="selector" bindchange="pickerChange" data-name="wine" name="assess.wine" value="{{wineVal||0}}" range="{{wineArr}}">
+    <picker mode="selector" bindchange="pickerChange" data-name="wine" name="assess.wine" value="{{wine||0}}" range="{{wineArr}}">
       <view class="picker">
-        {{wineArr[wineVal||0]}}
+        {{wineArr[wine||0]}}
       </view>
     </picker>
   </view>
-  <view class="cu-form-group">
-    <view class="title">院内每日摄入热量</view>
-    <input placeholder="请输入院内每日摄入热量" name="quantity" type="number" class="text-right"></input>
-    <view class="text-gray text-xs margin-left-xs padding-top-xs">Kcal</view>
+  <view class="cu-bar bg-gary solid-bottom">
+    <view class="action">
+      <text class="cuIcon-titles text-orange"></text> 并发症
+    </view>
   </view>
+  <checkbox-group bindchange="otherChange" data-name="complications" value="{{complications}}" name="assess.complications" class="solid-bottom">
+    <view class="cu-form-group justify-start" wx:for="{{complicationArr}}" wx:key="index">
+      <checkbox class='round blue' value="{{item}}"></checkbox>
+      <view class="margin-left">{{item}}</view>
+    </view>
+  </checkbox-group>
+
+  <view class="cu-bar bg-gary solid-bottom">
+    <view class="action">
+      <text class="cuIcon-titles text-orange"></text> 量表测评
+    </view>
+  </view>
+
+  <view class="cu-list menu footer-btns">
+
+    <view class="cu-item arrow" bindtap="toUrl" data-url="/pages/scale/form?type=sas">
+      <picker hidden name="other.sas" value="{{sas}}"></picker>
+      <view class="content padding-tb-sm">
+        <view>
+          焦虑测评
+        </view>
+        <view class="text-orange text-sm" wx:if="{{sas.suggest}}">
+          <text class="cuIcon-infofill margin-right-xs"></text> {{sas.suggest}}
+        </view>
+      </view>
+      <view class="action">
+        <view class="text-right {{sas?'':'text-gray'}}">{{sas.score||'点击进入测评'}}</view>
+      </view>
+    </view>
+    <view class="cu-item arrow" bindtap="toUrl" data-url="/pages/scale/form?type=sds">
+      <picker hidden name="other.sds" value="{{sds}}"></picker>
+      <view class="content padding-tb-sm">
+        <view>
+          抑郁测评
+        </view>
+        <view class="text-orange text-sm">
+          <text class="cuIcon-infofill margin-right-xs"></text> {{sds.suggest}}
+        </view>
+      </view>
+      <view class="action">
+        <view class="text-right {{sds?'':'text-gray'}}">{{sds.score||'点击进入测评'}}</view>
+      </view>
+    </view>
+  </view>
+
+
+
+
+  <!--  
   <view class="cu-bar bg-gary solid-bottom">
     <view class="action">
       <text class="cuIcon-titles text-orange"></text> 其他
     </view>
   </view>
   <checkbox-group bindchange="otherChange" data-name="others" value="{{others}}" name="assess.others" class="safe-btns">
-    <view class="cu-form-group justify-start">
-      <checkbox class='round blue' value="糖尿病自我管理知识缺乏"></checkbox>
-      <view class="margin-left">糖尿病自我管理知识缺乏</view>
-    </view>
-    <view class="cu-form-group justify-start">
-      <checkbox class='round blue' value="糖尿病自我管理态度消极"></checkbox>
-      <view class="margin-left">糖尿病自我管理态度消极</view>
-    </view>
-    <view class="cu-form-group justify-start">
-      <checkbox class='round blue' value="糖尿病自我管理行为差"></checkbox>
-      <view class="margin-left">糖尿病自我管理行为差</view>
-    </view>
-    <view class="cu-form-group justify-start">
-      <checkbox class='round blue' value="经济困难"></checkbox>
-      <view class="margin-left">经济困难</view>
-    </view>
-    <view class="cu-form-group justify-start">
-      <checkbox class='round blue' value="焦虑/抑郁"></checkbox>
-      <view class="margin-left">焦虑/抑郁</view>
-    </view>
-    <view class="cu-form-group justify-start">
-      <checkbox class='round blue' value="家庭支持系统差"></checkbox>
-      <view class="margin-left">家庭支持系统差</view>
-    </view>
-    <view class="cu-form-group justify-start">
-      <checkbox class='round blue' value="用药依从性差"></checkbox>
-      <view class="margin-left">用药依从性差</view>
+    <view class="cu-form-group justify-start" wx:for="{{otherArr}}" wx:key="index">
+      <checkbox class='round blue' value="{{item}}"></checkbox>
+      <view class="margin-left">{{item}}</view>
     </view>
   </checkbox-group>
-
+  -->
   <view class="padding margin-top-xl  text-center footer bg-white">
     <button style="width: 40%;" class="cu-btn bg-main padding-tb-xl round" form-type="submit" disabled="{{disabled}}">完成评估</button>
   </view>
