--- a/pages/patient/scanResult.wxml
+++ b/pages/patient/scanResult.wxml
@@ -1,8 +1,6 @@
 <topTips errorShow="{{errorShow}}" errorMsg="{{errorMsg}}" errorType="{{errorType}}"></topTips>
+<include src="/pages/template/scanModal"></include>
 <form bindsubmit="submit">
-  <picker style="display: none;" value="{{images}}" name="otherInfo.images"></picker>
-  <picker style="display: none;" value="{{treats}}" name="otherInfo.treats"></picker>
-  <picker style="display: none;" value="{{diagnoses}}" name="otherInfo.diagnoses"></picker>
   <view class="cu-bar bg-gray">
     <view class="action">
       <text class="cuIcon-title text-blue"></text>基本信息
@@ -13,109 +11,197 @@
   </view>
   <view class="cu-form-group">
     <view class="title">姓名</view>
-    <input placeholder="请输入姓名" name="name" class="text-right" value="{{scanData['姓名']}}"></input>
+    <input placeholder="请输入姓名" name="name" class="text-right" data-name="name" bindinput="inputChange" value="{{patientData['name']}}"></input>
   </view>
+
   <view class="cu-form-group">
-    <view class="title">手机号码</view>
-    <input placeholder="请输入手机号码" name="phone" class="text-right" value=""></input>
+    <view class="title">性别</view>
+    <input placeholder="请输入性别" name="gender" data-name="gender" bindinput="inputChange" class="text-right" value="{{patientData['gender']}}"></input>
   </view>
   <view class="cu-form-group">
     <view class="title">年龄</view>
-    <input placeholder="请输入年龄" name="age" class="text-right" value="{{scanData['年龄']}}"></input>
-  </view>
-  <view class="cu-form-group">
-    <view class="title">身高</view>
-    <input placeholder="请输入身高" name="height" class="text-right" value="{{scanData['身高']}}"></input>
-    <text class="text-gray text-xs padding-top-xs margin-left-xs">CM</text>
-  </view>
-  <view class="cu-form-group">
-    <view class="title">性别</view>
-    <input placeholder="请输入性别" name="gender" class="text-right" value="{{scanData['性别']}}"></input>
-  </view>
-  <view class="cu-form-group">
-    <view class="title">体重</view>
-    <input placeholder="请输入体重" type="digit" name="weight" class="text-right" value="{{scanData['体重']}}"></input>
-    <text class="text-gray text-xs padding-top-xs margin-left-xs">KG</text>
+    <input placeholder="请输入年龄" name="age" data-name="age" bindinput="inputChange" type="number" class="text-right" value="{{patientData['age']}}"></input>
   </view>
 
   <view class="cu-form-group">
-    <view class="title">腰围</view>
-    <input placeholder="请输入腰围" type="number" name="waistline" class="text-right" value=""></input>
-    <text class="text-gray text-xs padding-top-xs margin-left-xs">CM</text>
+    <view class="title">ID</view>
+    <input placeholder="请输入病人ID" name="hospitalId" data-name="name" bindinput="inputChange" type="number" class="text-right" value="{{patientData['hospitalId']}}"></input>
   </view>
   <view class="cu-form-group">
-    <view class="title">臀围</view>
-    <input placeholder="请输入臀围" type="number" name="hipline" class="text-right" value=""></input>
-    <text class="text-gray text-xs padding-top-xs margin-left-xs">CM</text>
+    <view class="title">入院时间</view>
+    <picker mode="date" bindchange="pickerChange" data-name="admissionDate" name="admissionDate" value="{{patientData['admissionDate']}}" range="{{wineArr}}">
+      <view class="picker">
+        {{patientData['admissionDate']||'请选择入院时间'}}
+      </view>
+    </picker>
+  </view>
+  <view class="cu-form-group">
+    <view class="title">出院时间</view>
+    <picker mode="date" bindchange="pickerChange" data-name="dischargeDate" name="dischargeDate" value="{{patientData['dischargeDate']}}">
+      <view class="picker">
+        {{patientData['dischargeDate']||'请选择出院时间'}}
+      </view>
+    </picker>
   </view>
 
   <view class="cu-bar bg-gray">
     <view class="action">
-      <text class="cuIcon-title text-blue"></text>既往病史
+      <text class="cuIcon-title text-blue"></text>入院诊断
     </view>
   </view>
-  <view class="cu-form-group">
-    <textarea maxlength="-1" name="otherInfo.sickHistory" value="{{scanData['入院诊断']}}" style="min-height: 200rpx;" auto-height="true" placeholder="请输入既往病史"></textarea>
-  </view>
-  <view class="cu-bar bg-gray">
-    <view class="action">
-      <text class="cuIcon-title text-blue"></text>化验体检
-    </view>
-  </view>
-  <view class="cu-form-group">
-    
-    <view class="grid col-4 grid-square flex-sub padding-tb">
-      <view class="bg-img" wx:for="{{images}}" wx:key="index">
-        <image src="{{images[index]}}" mode="aspectFill" bindtap="viewImage" data-url="{{images[index]}}"></image>
-        <view class="cu-tag bg-red" bindtap="remove" data-index="{{index}}" data-type="image">
-          <text class='cuIcon-close'></text>
-        </view>
-      </view>
-      <view class="solids" bindtap="chooseImage" wx:if="{{images.length<4}}">
-        <text class='cuIcon-cameraadd'></text>
-      </view>
-    </view>
+  <view class="cu-form-group flex-wrap">
+    <view class="cu-tag margin-tb-xs text-main bg-white" wx:for="{{patientData['admissionDiagnosis']}}" wx:key="index">{{item}}</view>
   </view>
   <view class="cu-bar bg-gray">
     <view class="action">
       <text class="cuIcon-title text-blue"></text>出院诊断
     </view>
+  </view>
+  <view class="cu-form-group flex-wrap">
+    <view class="cu-tag margin-tb-xs text-main bg-white" wx:for="{{patientData['dischargeDiagnosis']}}" wx:key="index">{{item}}</view>
+  </view>
+  <view class="cu-bar bg-gray">
     <view class="action">
-      <text class="cuIcon-add text-grey" bindtap="add" data-type="diagnose"></text>
+      <text class="cuIcon-title text-blue"></text>入院情况
     </view>
   </view>
-  <view class="cu-form-group" wx:for="{{diagnoses}}">
-    <input placeholder="请输入诊断内容" value="{{item.name}}" bindinput="inputChange" data-type="diagnose" data-index="{{index}}" data-title="name"></input>
-    <text class="cuIcon-move text-red" bindtap="remove" data-type="diagnose" data-index="{{index}}"></text>
+  <view class="cu-form-group">
+    <view class="padding-tb">{{patientData['admissionInfo']}}</view>
   </view>
   
+  <view class="cu-bar bg-gray">
+    <view class="action">
+      <text class="cuIcon-title text-blue"></text>既往史
+    </view>
+  </view>
+  <view class="cu-form-group">
+    <view class="padding-tb">{{patientData['anamnesis']}}</view>
+  </view>
+  <view class="cu-bar bg-gray">
+    <view class="action">
+      <text class="cuIcon-title text-blue"></text>治疗经过
+    </view>
+  </view>
+  <view class="cu-form-group">
+    <view class="padding-tb">{{patientData['treatment']}}</view>
+  </view>
+  <view class="cu-bar bg-gray">
+    <view class="action">
+      <text class="cuIcon-title text-blue"></text>出院情况
+    </view>
+  </view>
+  <view class="cu-form-group">
+    <view class="padding-tb">{{patientData['dischargeInfo']}}</view>
+  </view>
+  <view class="cu-bar bg-gray">
+    <view class="action">
+      <text class="cuIcon-title text-blue"></text>出院医嘱(生活方式)
+    </view>
+  </view>
+  <view class="cu-form-group">
+    <view class="padding-tb">{{patientData['life']['content']}}</view>
+  </view>
 
+  <view class="cu-form-group" wx:for="{{patientData['life']['diet']}}">
+    <view class="title">{{item}}</view>
+    <checkbox class='round checked main' checked="true" disabled="true"></checkbox>
+    <input hidden name="plan.lowSalt" value="{{item}}" wx:if="{{item=='低盐'}}"></input>
+    <input hidden name="plan.lowFat" value="{{item}}" wx:if="{{item=='低脂'}}"></input>
+  </view>
+  
+  <view class="cu-list menu solid-top">
+    <input hidden name="quantity" value="{{patientData['life']['cal']}}"></input>
+    <view class="cu-item">
+      <view class="content">
+        每日热量
+      </view>
+      <view class="action">
+        {{patientData['life']['cal']}}
+      </view>
+    </view>
+  </view>
 
   <view class="cu-bar bg-gray">
     <view class="action">
-      <text class="cuIcon-title text-blue"></text>治疗
+      <text class="cuIcon-title text-blue"></text>出院医嘱(药物治疗)
     </view>
   </view>
   <view class="padding flex bg-white solid-bottom">
     <text class="flex-treble">药品名称</text>
+    <text class="flex-twice text-center">产商</text>
     <text class="flex-twice text-center">规格</text>
     <text class="flex-twice text-center">方式</text>
     <text class="flex-twice text-center">时间</text>
-    <text class="cuIcon-add text-main text-bold" bindtap="add" data-type="treat"></text>
   </view>
-  <view class=" safe-btns">
-    <view class="padding flex bg-white solid-bottom text-sm" wx:for="{{treats}}">
-      <input class="flex-treble text-left" placeholder="药品名称" value="{{item.name}}" bindinput="inputChange" data-type="treat" data-index="{{index}}" data-title="name"></input>
-      <input class="flex-twice text-center" placeholder="药品规格" value="{{item.specs}}" bindinput="inputChange" data-type="treat" data-index="{{index}}" data-title="specs"></input>
-      <input class="flex-twice text-center" placeholder="服用方式" value="{{item.way}}" bindinput="inputChange" data-type="treat" data-index="{{index}}" data-title="way"></input>
-      <input class="flex-twice text-center text-red" placeholder="服用时间" value="{{item.time}}" bindinput="inputChange" data-type="treat" data-index="{{index}}" data-title="time"></input>
-      <text class="cuIcon-move text-red margin-left-sm" bindtap="remove" data-type="treat" data-index="{{index}}"></text>
+
+  <view class="padding flex bg-white text-sm" wx:for="{{patientData['drugs']}}" wx:key="index">
+    <text class="flex-treble">{{item.name}}</text>
+    <text class="flex-twice text-center">{{item.company}}</text>
+    <text class="flex-twice text-center">{{item.dosage}}</text>
+    <text class="flex-twice text-center">{{item.mode}}</text>
+    <text class="flex-twice text-center">{{item.daily}}</text>
+  </view>
+
+
+  <view class="cu-bar bg-gray">
+    <view class="action">
+      <text class="cuIcon-title text-blue"></text>出院医嘱(复诊要求)
+    </view>
+  </view>
+  <view class="cu-form-group solid-bottom">
+    <view class="padding-tb">{{patientData['reviewRequire']['content']}}</view>
+  </view>
+  <view class="cu-list menu">
+    <view class="cu-item">
+      <view class="content">
+        复诊时间
+      </view>
+      <view class="action">
+        {{patientData['reviewRequire']['time']}}
+      </view>
     </view>
   </view>
 
+  <view class="cu-bar bg-gray">
+    <view class="action">
+      <text class="cuIcon-title text-blue"></text>出院医嘱(复查项目)
+    </view>
+  </view>
+  <view class=" footer-btns">
+    <view class="cu-form-group solid-bottom">
+      <view class="padding-tb">{{patientData['reviewProject']['content']}}</view>
+    </view>
+    <view class="cu-list menu">
+      <view class="cu-item">
+        <view class="content">
+          复查时间
+        </view>
+        <view class="action">          
+          <veiw class="cu-tag" wx:for="{{patientData['reviewProject']['time']}}" wx:key="index">{{item}}</veiw>
+        </view>
+      </view>
+    </view>
+
+    <view class="cu-form-group">
+    <view class="title">复查时间</view>
+    <picker mode="date" bindchange="pickerChange" data-name="reviewDate" name="reviewDate" value="{{patientData['reviewDate']}}">
+      <view class="picker">
+        {{patientData['reviewDate']||'请选择出院时间'}}
+      </view>
+    </picker>
+  </view>
+  <view class="cu-form-group">
+    <view class="title">复诊时间</view>
+    <picker mode="date" bindchange="pickerChange" data-name="reviewDiagnosisDate" name="reviewDiagnosisDate" value="{{patientData['reviewDiagnosisDate']}}">
+      <view class="picker">
+        {{patientData['reviewDiagnosisDate']||'请选择出院时间'}}
+      </view>
+    </picker>
+  </view>
+  </view>
 
   <view class="padding margin-top-xl flex justify-between align-center bg-white footer">
-    <button style="width: 40%;" class="cu-btn bg-main padding-tb-xl round" bindtap="scan">重新扫描</button>
+    <button style="width: 40%;" class="cu-btn bg-main padding-tb-xl round" bindtap="modalStatus" data-name="scan">重新扫描</button>
     <button style="width: 40%;" class="cu-btn bg-main padding-tb-xl padding-tb-xl round" form-type="submit">保存结果</button>
   </view>
 </form>
